--- a/js/index.html
+++ b/js/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script async src="../basicLightbox.min.js"></script>
+    <link rel="stylesheet" href="../main.scss">
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <ul class="gallery"></ul>
-    <script src="./gallery.js"></script>
+    <script type="module" src="./gallery.js"></script>
   </body>
 </html>
